# name-address-quote

./: .env  README.md  pyproject.toml
src/name_address_quote/: brave_api.py  test.py
